RESOLVED FIXED222810
[Payment Request] if `requestShipping: false` then we should not show any `PaymentShippingOption` in the Apple Pay sheet
https://bugs.webkit.org/show_bug.cgi?id=222810
Summary [Payment Request] if `requestShipping: false` then we should not show any `Pa...
Devin Rousso
Reported 2021-03-05 10:48:33 PST
.
Attachments
Patch (3.10 KB, patch)
2021-03-05 10:54 PST, Devin Rousso
thorton: review+
hi: commit-queue-
Patch (2.29 KB, patch)
2021-03-05 12:43 PST, Devin Rousso
hi: commit-queue+
Patch (11.11 KB, patch)
2021-03-05 13:42 PST, Devin Rousso
no flags
Patch (18.52 KB, patch)
2021-03-05 13:56 PST, Devin Rousso
no flags
Devin Rousso
Comment 1 2021-03-05 10:48:52 PST
Devin Rousso
Comment 2 2021-03-05 10:54:04 PST
Devin Rousso
Comment 3 2021-03-05 12:11:06 PST
Comment on attachment 422384 [details] Patch After talking with @Andy Estes, I think I want/need to tweak this to be more spec compatible.
Devin Rousso
Comment 4 2021-03-05 12:43:43 PST
Devin Rousso
Comment 5 2021-03-05 13:42:46 PST
Devin Rousso
Comment 6 2021-03-05 13:56:59 PST
EWS
Comment 7 2021-03-05 15:29:07 PST
Committed r274012: <https://commits.webkit.org/r274012> All reviewed patches have been landed. Closing bug and clearing flags on attachment 422413 [details].
Note You need to log in before you can comment on or make changes to this bug.