[Payment Request] if `requestShipping: false` then we should not show any `PaymentShippingOption` in the Apple Pay sheet https://bugs.webkit.org/show_bug.cgi?id=222810 <rdar://problem/74550889>

Reviewed by Andy Estes and Tim Horton.

Source/WebCore:

When constructing a `PaymentRequest`, the spec has logic for ensuring that `shippingOptions`
is an array by overriding `[[details]].shippingOptions` if `requestShipping: true` [1]. It
also won't update `[[details]].shippingOptions` unless `update.ShippingOptions` is provided
and `requestShipping: true` [2]. Currently, this means that if `requestShipping: false`, we
don't perform any validation of `[[details]].shippingOptions` and even provide that data to
the Apple Pay sheet. Since there is no way to look at the selected (or even the list of)
shipping option without `requestShipping: true`, we now clear `[[details]].shippingOptions`
if `requestShipping: false`.

[1]: https://www.w3.org/TR/payment-request/#constructor
[2]: https://www.w3.org/TR/payment-request/#update-a-paymentrequest-s-details-algorithm

* Modules/paymentrequest/PaymentRequest.cpp:
(WebCore::checkAndCanonicalizeDetails):

LayoutTests:

* http/tests/inspector/paymentrequest/payment-request-internal-properties.https.html:
* http/tests/inspector/paymentrequest/payment-request-internal-properties.https-expected.txt:
* http/tests/paymentrequest/updateWith-shippingOptions.https.html:
* http/tests/ssl/applepay/PaymentRequest.https.html:
* http/tests/ssl/applepay/PaymentRequest.https-expected.txt:


Canonical link: https://commits.webkit.org/234950@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@274012 268f45cc-cd09-0410-ab3c-d52691b4dbfc